--- a/sass-css/_General-Style.scss
+++ b/sass-css/_General-Style.scss
@@ -366,6 +366,7 @@ body {
     position: relative;
     padding: 0 10%;
     width: 100%;
+    padding-bottom: 5rem;
     text-align: center;
     transition: all 0.5s ease-in-out;
 
@@ -541,7 +542,7 @@ body {
     --bg-before: #0e2336;
     position: relative;
     padding: 0 10%;
-    padding-bottom: 1rem;
+    padding-bottom: 7rem;
     transition: all 0.5s ease-in-out;
 
     .FondoSkills {
@@ -1490,6 +1491,24 @@ body {
         }
       }
     }
+  }
+}
+
+@media (max-width: 425px) {
+  html {
+    font-size: 35.5%;
+  }
+}
+
+@media (max-width: 375px) {
+  html {
+    font-size: 31.5%;
+  }
+}
+
+@media (max-width: 320px) {
+  html {
+    font-size: 26.5%;
   }
 }
 
