--- a/sass-css/_General-Style.scss
+++ b/sass-css/_General-Style.scss
@@ -1423,6 +1423,12 @@ body {
   }
 }
 
+@media (max-width: 1920px) {
+  html {
+    font-size: 90.5%;
+  }
+}
+
 @media (max-width: 1400px) {
   html {
     font-size: 62.5%;
@@ -1502,7 +1508,7 @@ body {
 
 @media (max-width: 375px) {
   html {
-    font-size: 30.5%;
+    font-size: 29.5%;
   }
 }
 
