--- a/sass-css/Styles.css
+++ b/sass-css/Styles.css
@@ -279,8 +279,8 @@ body .Home .home-rds a {
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
-  width: 4rem;
-  height: 4rem;
+  width: 5rem;
+  height: 5rem;
   color: #00b7ff;
   background: transparent;
   border: solid 0.2rem #00b7ff;
@@ -289,7 +289,7 @@ body .Home .home-rds a {
   transition: box-shadow 0.3s ease;
 }
 body .Home .home-rds a i {
-  font-size: 2.5rem;
+  font-size: 2.8rem;
 }
 body .Home .home-rds a:hover {
   box-shadow: 0 0 5rem #00b7ff;
@@ -740,14 +740,14 @@ body .Projects .projects-container .owl-carousel-1 .card {
   margin: 2rem;
   color: #ffffff;
   background-image: url("../img/ProjectPortfolio.webp");
-  background-size: 31rem 43rem;
+  background-size: 31rem 46rem;
   background-repeat: no-repeat;
   background-position: center;
   padding: 16rem 0 0;
   border: none;
   width: 100%;
-  height: 43rem;
-  max-width: 50ch;
+  height: 46rem;
+  max-width: 60ch;
   border-radius: 1rem;
   overflow: hidden;
   transition: all 0.3s ease-in-out;
@@ -784,7 +784,7 @@ body .Projects .projects-container .owl-carousel-1 .card .card-container .card-b
 body .Projects .projects-container .owl-carousel-1 .card .card-container .card-body .card-text {
   opacity: 0;
   transition: opacity 1s ease-in-out;
-  font-size: 1.1rem;
+  font-size: 1.3rem;
   text-align: justify;
 }
 body .Projects .projects-container .owl-carousel-1 .card .card-container .card-body #Spans {
@@ -804,6 +804,7 @@ body .Projects .projects-container .owl-carousel-1 .card .card-container .card-b
   align-items: center;
   padding: 0.3rem;
   gap: 0.5rem;
+  font-size: 1.3rem;
 }
 body .Projects .projects-container .owl-carousel-1 .card .card-container .card-body #Spans #SpHTML {
   background-color: #e44d26;
@@ -846,8 +847,8 @@ body .Projects .projects-container .owl-carousel-1 .card .card-container .card-b
   text-decoration: none;
   justify-content: center;
   align-items: center;
-  width: 4rem;
-  height: 4rem;
+  width: 5rem;
+  height: 5rem;
   background: transparent;
   border: solid 0.2rem #00b7ff;
   border-radius: 50%;
@@ -859,7 +860,7 @@ body .Projects .projects-container .owl-carousel-1 .card .card-container .card-b
   color: #00b7ff;
 }
 body .Projects .projects-container .owl-carousel-1 .card .card-container .card-body #Enlaces a i {
-  font-size: 2.5rem;
+  font-size: 2.8rem;
 }
 body .Projects .projects-container .owl-carousel-1 .card .card-container .card-body #Enlaces a:hover, body .Projects .projects-container .owl-carousel-1 .card .card-container .card-body #Enlaces a:active {
   box-shadow: 0 0 1rem 0.5rem #00b7ff;
@@ -1177,11 +1178,22 @@ body .footer .footer-iconTop a i {
   html {
     font-size: 43.5%;
   }
-  body .header {
-    padding-right: 0;
-  }
   body .header #headernav .navbar-toggler {
     display: block;
+    position: relative;
+  }
+  body .header #headernav .navbar {
+    position: absolute;
+    padding: 0 4%;
+    left: 0;
+    top: 100%;
+  }
+  body .header #headernav .navbar #navbar {
+    width: 100vw;
+    padding: 3rem 0;
+    background-color: rgba(12, 22, 33, 0.4901960784);
+    -webkit-backdrop-filter: blur(5px);
+            backdrop-filter: blur(5px);
   }
 }
 @media (max-width: 576px) {
