--- a/sass-css/_General-Style.scss
+++ b/sass-css/_General-Style.scss
@@ -340,8 +340,8 @@ body {
         flex-wrap: wrap;
         justify-content: center;
         align-items: center;
-        width: 4rem;
-        height: 4rem;
+        width: 5rem;
+        height: 5rem;
         color: $main-color;
         background: transparent;
         border: solid 0.2rem $main-color;
@@ -350,7 +350,7 @@ body {
         transition: box-shadow 0.3s ease;
 
         i {
-          font-size: 2.5rem;
+          font-size: 2.8rem;
         }
 
         &:hover {
@@ -921,14 +921,14 @@ body {
           margin: 2rem;
           color: $text-color;
           background-image: url("../img/ProjectPortfolio.webp");
-          background-size: 31rem 43rem;
+          background-size: 31rem 46rem;
           background-repeat: no-repeat;
           background-position: center;
           padding: 16rem 0 0;
           border: none;
           width: 100%;
-          height: 43rem;
-          max-width: 50ch;
+          height: 46rem;
+          max-width: 60ch;
           border-radius: 1rem;
           overflow: hidden;
           transition: all 0.3s ease-in-out;
@@ -975,7 +975,7 @@ body {
               .card-text {
                 opacity: 0;
                 transition: opacity 1s ease-in-out;
-                font-size: 1.1rem;
+                font-size: 1.3rem;
                 text-align: justify;
               }
 
@@ -996,6 +996,7 @@ body {
                   align-items: center;
                   padding: 0.3rem;
                   gap: 0.5rem;
+                  font-size: 1.3rem;
                 }
 
                 #SpHTML {
@@ -1042,8 +1043,8 @@ body {
                   text-decoration: none;
                   justify-content: center;
                   align-items: center;
-                  width: 4rem;
-                  height: 4rem;
+                  width: 5rem;
+                  height: 5rem;
                   background: transparent;
                   border: solid 0.2rem $main-color;
                   border-radius: 50%;
@@ -1055,7 +1056,7 @@ body {
                   color: $main-color;
 
                   i {
-                    font-size: 2.5rem;
+                    font-size: 2.8rem;
                   }
 
                   &:hover,
@@ -1454,11 +1455,26 @@ body {
 
   body{
     .header{
-      padding-right: 0;
+
       #headernav {
         .navbar-toggler {
           display: block;
+          position: relative;
         }
+
+        .navbar {
+          position: absolute;
+          padding: 0 4%;
+          left: 0;
+          top: 100%;
+
+          #navbar {
+            width: 100vw;
+            padding: 3rem 0;
+            background-color: #0c16217d;
+            backdrop-filter: blur(5px);
+        }
+      }
       }
     }
   }
@@ -1517,6 +1533,7 @@ body {
     font-size: 26.5%;
   }
 }
+
 
 
 
