--- a/sass-css/_General-Style.scss
+++ b/sass-css/_General-Style.scss
@@ -741,7 +741,7 @@ body {
             }
           }
 
-          #C {
+          #Cm {
             height: 15rem;
             filter: grayscale(50%);
             &:hover,
